<resources>
    <string name="app_name">WorkoutPlan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
</resources>
